--- a/prjRefugioAnimal/pom.xml
+++ b/prjRefugioAnimal/pom.xml
@@ -46,8 +46,18 @@
     <artifactId>json</artifactId>
     <version>20210307</version>
 </dependency>
-
-
-</dependencies>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>jcalendar-1.4</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <name>prjRefugioAnimal1</name>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
